manifests/keycloak.yaml
apiVersion: projectcontour.io/v1
kind: HTTPProxy
metadata:
  name: keycloak
spec:
  virtualhost:
    fqdn: keycloak.127-0-0-121.nip.io
    tls:
      passthrough: true
  tcpproxy:
    services:
      - name: keycloak
        port: 8443
---
apiVersion: v1
kind: Service
metadata:
  name: keycloak
spec:
  selector:
    app: keycloak
  ports:
    - name: https
      port: 8443
---
apiVersion: v1
kind: Service
metadata:
  name: keycloak-headless
spec:
  type: ClusterIP
  clusterIP: None
  selector:
    app: keycloak
  ports:
    - name: https
      port: 8443
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: keycloak
spec:
  selector:
    matchLabels:
      app: keycloak
  replicas: 2
  serviceName: keycloak-headless
  template:
    metadata:
      labels:
        app: keycloak
    spec:
      containers:
        - name: keycloak
          image: localhost/keycloak:latest
          imagePullPolicy: Never

          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
            - name: https
              containerPort: 8443
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /auth/
              port: http
            initialDelaySeconds: 300
            timeoutSeconds: 5

          readinessProbe:
            httpGet:
              path: /auth/realms/master
              port: http
            initialDelaySeconds: 30
            timeoutSeconds: 1

          volumeMounts:
            - name: cli-scripts
              mountPath: /opt/jboss/startup-scripts
              readOnly: true
            - name: https-certs
              mountPath: /certs
              readOnly: true
            - name: keycloak-config
              mountPath: /input/config

      volumes:
        - name: cli-scripts
          configMap:
            name: cli-scripts
        - name: https-certs
          secret:
            secretName: keycloakcert
        - name: keycloak-config
          configMap:
              name: keycloak-config
